--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ["2.6", "2.7", "3.0", "3.0.2p107"]
+        ruby-version: ["2.6", "2.7", "3.0"]
 
     steps:
       - uses: actions/checkout@v2
